--- a/resources/assets/sass/gamestation/_cards.scss
+++ b/resources/assets/sass/gamestation/_cards.scss
@@ -1,38 +1,35 @@
 .card {
     border-radius: 4px;
-    display: inline-block;
-    padding: 5px 10px;
-    position: relative;
-    width: 100%;
     min-height: 222px;
+    padding: 5px 10px;
 }
+
 .card-header,
 .card-footer {
     font-size: 18px;
     font-weight: 200;
-    margin: 0px;
-    padding: 0px;
 }
-.card-body {
-    min-height: 136px;
-}
-.card h2 {
-    font-size: 35px;
+
+.card h1 {
+    font-size: 30px;
     font-weight: 400;
-    margin: 10px 0;
-    padding: 0px;
 }
+
 .card .fa {
     display: block;
+    margin: 10px;
     font-size: 1em;
 }
+
 .card dl {
     margin-bottom: 0px;
     font-size: 16px;
 }
+
 .card dt {
     font-weight: 400;
 }
+
 .card dd {
     margin-bottom: 3px;
     font-weight: 200;
